# sososo

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AUTHORS  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  LICENSING.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  TRADEMARK.md  commitlint.config.js  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.development-history/: 2026-06-05-init-claude-md.md  2026-06-05-nova3-languages-and-session-history.md  2026-06-06-ai-summary-milestone-e.md  2026-06-06-compact-recording-widget.md  2026-06-06-dependabot-security-only.md  2026-06-06-device-pickers-start-screen.md  2026-06-06-docs-reference-folder.md  2026-06-06-edit-speaker-names.md  2026-06-06-font-size-settings.md  2026-06-06-gemini-ai-provider.md  2026-06-06-glass-transparency-blur-degloss.md  2026-06-06-header-brand-logo.md  2026-06-06-history-sidebar-refresh.md  2026-06-06-hugeicons-default-iconset.md  2026-06-06-icon-rich-ui.md  2026-06-06-liquid-glass-ui.md  2026-06-06-live-translation.md  2026-06-06-macos-cross-platform-support.md  2026-06-06-native-acrylic-blur.md  2026-06-06-per-speaker-label-colors.md  2026-06-06-prettier-sop-setup.md  2026-06-06-regenerate-app-icons.md  2026-06-06-release-0.2.0.md  2026-06-06-release-0.3.0.md  2026-06-06-remove-background-blur.md  2026-06-06-rustfmt-sop-setup.md  2026-06-06-settings-api-key-help.md  2026-06-06-single-window-pause-finish.md  2026-06-06-summary-language-setting.md  2026-06-06-tailwind-v4-migration.md  2026-06-06-transparent-glass-no-blur.md  2026-06-07-audio-source-icon-toggle.md  2026-06-07-auto-update.md  2026-06-07-chat-right-sidebar.md  2026-06-07-library-qol-search-autosummary.md  2026-06-07-linux-support.md  2026-06-07-phase1-safety-net.md  2026-06-07-phase2-coverage.md  2026-06-07-phase3-decomposition.md  2026-06-07-phase4-polish.md  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  website.yml
docs/: README.md  ai-and-translation.md  architecture.md  audio-pipeline.md  build-and-release.md  data-model.md  development.md  frontend.md  ipc-reference.md  platform-support.md  security-and-config.md  testing.md
docs/superpowers/plans/: 2026-06-06-edit-speaker-names.md
docs/superpowers/specs/: 2026-06-06-edit-speaker-names-design.md  2026-06-06-live-translation-design.md  2026-06-07-professional-hardening-design.md  2026-06-07-tdd-foundation-design.md  2026-06-11-landing-page-design.md
src/: AppRouter.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  rustfmt.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: main.json
src-tauri/examples/: audio_probe.rs  thumb_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  error.rs  events.rs  hotkey.rs  keys.rs  lib.rs  main.rs  meeting.rs  session.rs  state.rs  tray.rs
src-tauri/src/ai/: gemini.rs  mod.rs  openai.rs  provider.rs  transcript.rs
src-tauri/src/audio/: capture.rs  devices.rs  mixer.rs  mod.rs  pulse.rs
src-tauri/src/audio/capture/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/audio/devices/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/commands/: apikeys.rs  assistant.rs  behavior.rs  devices.rs  history.rs  mod.rs  session.rs  video.rs
src-tauri/src/db/: chat.rs  mod.rs  search.rs  segments.rs  sessions.rs  settings.rs  tests.rs
src-tauri/src/video/: macos.rs  mixer.rs  mod.rs  unsupported.rs  windows.rs
src/hooks/: useElapsedTimer.test.ts  useElapsedTimer.ts  useLiveTranslation.ts  useMeetingDetection.ts  useSession.ts  useTranscriptStream.ts
src/lib/: events.ts  format.test.ts  format.ts  icons.ts  ipc.ts  languages.test.ts  languages.ts  platform.ts  recordingToggle.test.ts  recordingToggle.ts  speaker.test.ts  speaker.ts  updater.ts  window.ts  windowPicker.test.ts  windowPicker.ts
src/state/: configStore.test.ts  configStore.ts  libraryStore.test.ts  libraryStore.ts  meetingStore.test.ts  meetingStore.ts  sessionStore.test.ts  sessionStore.ts  transcriptStore.test.ts  transcriptStore.ts  updateStore.test.ts  updateStore.ts
src/styles/: app.css  glass.css  reset.css  theme.css
src/types/: domain.ts
src/windows/main/: LiveStatusViews.tsx  MainApp.tsx  MeetingBanner.tsx  RecordingView.tsx  SessionSidebar.tsx  Titlebar.tsx  UpdateBanner.tsx  main.css  recordingStatus.test.ts  recordingStatus.ts
src/windows/main/routes/: AboutRoute.tsx  LibraryRoute.tsx  SearchRoute.tsx  SessionDetailRoute.tsx  SettingsRoute.tsx
src/windows/main/routes/sessionDetail/: ChatPanel.tsx  highlightText.test.tsx  highlightText.tsx  markdown.tsx  speakers.test.ts  speakers.ts
src/windows/main/routes/settings/: AppearanceSection.tsx  BehaviorSection.tsx  styles.ts  updateStatus.test.ts  updateStatus.ts
website/: index.html  package.json  tsconfig.json  vite.config.ts
website/src/: main.ts  styles.css
website/src/lib/: release.test.ts  release.ts
